--- a/contact-style.css
+++ b/contact-style.css
@@ -13,11 +13,10 @@ h1{
 
 p{
     font-family: 'Raleway', sans-serif;
-    font-size: 24;
+    font-size: 24px;
     line-height: 40px;
 
 }
-
 
 .top-page{
     background-image: url(../LuxuryRealEstate/assest/Image@2x.png) !important;
@@ -39,7 +38,6 @@ p{
     border-top-right-radius: 50px;
 }
 
-
 .contact-website{
     text-decoration:none; 
     color:#808080;
@@ -49,9 +47,14 @@ p{
     background-color: #f5f3f1;
 }
 
+.smallcase-p{
+    font-size: small;
+    color: #181D24;
+}
+
 th{
     background-color: #f5f3f1 !important;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 100;
 }
 
@@ -59,7 +62,6 @@ td{
     background-color: #f5f3f1 !important;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    font-size: 20px;
     line-height: 24px;
 }
 
@@ -89,7 +91,7 @@ td{
 .contact-basefooter{
     background-color: #DFE3E7;
     padding-top: 250px;
-    font-size:small;
+    font-size: smaller;
 }
 
 @media screen and (max-width: 768px){
