updated css file

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../img/bg-hero.png") center center;
+    background: url("../accessories/bg-hero.png") center center;
     background-size: cover;
     position: relative;
     /* padding: 80px 0; */
