--- a/contact-style.css
+++ b/contact-style.css
@@ -107,8 +107,13 @@ td{
         border-bottom-right-radius: 50px !important;
         border-top-right-radius: none !important;
     } 
+
+    .contact-connectus{
+        padding: 10px !important;
     
+    }
+
     .btn{
-        width: 350px;
+        width: 350px !important;
     }
 }
