--- a/CSS/style.css
+++ b/CSS/style.css
@@ -977,7 +977,7 @@ color: rgba(24, 29, 36, 1) !important;
         justify-content: center !important;
         /* position: absolute !important; */
         height: 80vh !important;
-        background-image: url("/accessories/Rectangle\ 124.png");
+        background-image: url("/accessories/Rectae.png");
         background-size: cover !important;
         background-position: center;
       }
