--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,6 +55,7 @@ header {
   justify-content: center;
   align-items: center;
   position: relative !important;
+  width: 100%;
 }
 .home-main {
   display: flex !important;
