made some changes to my image

--- a/CSS/itempage.css
+++ b/CSS/itempage.css
@@ -141,7 +141,7 @@ td:hover {
 
 
 .luxury-life{
-  background-image: url(../accessories/Rectangle\ 124.png);
+  background-image: url('../accessories/Rectangle-it-2.png');
   background-position: center;
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -209,7 +209,7 @@ footer{
 
 
 .luxury-life{
-  background-image: url(./accessories/Rectangle\ 124.png);
+  background-image: url('../accessories/Rectangle-it-2.png');
   background-position: center;
   background-size: 100% auto;
   background-repeat: no-repeat;
