--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,7 @@ padding-left: 180px;
 }
 
 .home-hero-container {
-  background-image: url("/accessories/home-hero.png");
+  background-image: url("../accessories/home-hero.png");
   background-size: cover !important;
   background-position: center !important;
   height: 100vh !important;
@@ -223,7 +223,7 @@ span i {
   width: 200px !important;
 }
 .hosted {
-  background-image: url("/accessories/mosque-pictures-moroccan-wall-pattern.png");
+  background-image: url("../accessories/mosque-pictures-moroccan-wall-pattern.png");
   border-radius: 0px 0px 80px 0px;
 }
 .about-logis {
@@ -299,7 +299,7 @@ text-align: left;
   justify-content: center !important;
   /* position: absolute !important; */
   height: 80vh !important;
-  background-image: url("/accessories/Rectangle\ 124.png");
+  background-image: url("../accessories/Rectangle\ 124.png");
   background-size: cover !important;
   background-position: center;
 }
@@ -485,7 +485,7 @@ color: rgba(24, 29, 36, 1) !important;
     
   }
   .home-hero-container {
-    background-image: url("/accessories/home-hero.png");
+    background-image: url("../accessories/home-hero.png");
     background-size: cover !important;
     background-position: center !important;
     height: 100vh !important;
@@ -614,7 +614,7 @@ text-align: left !important;
       justify-content: center !important;
       /* position: absolute !important; */
       /* height: 80vh !important; */
-      background-image: url("/accessories/Rectangle\ 124.png");
+      background-image: url("../accessories/Rectangle\ 124.png");
       background-size: cover !important;
       background-position: center;
       margin-top: 20% !important;
@@ -676,7 +676,7 @@ text-align: left !important;
       justify-content: center !important;
       /* position: absolute !important; */
       height: 80vh !important;
-      background-image: url("/accessories/Rectangle\ 124.png");
+      background-image: url("../accessories/Rectangle\ 124.png");
       background-size: cover !important;
       background-position: center;
     }
@@ -793,7 +793,7 @@ text-align: left !important;
     
   }
   .home-hero-container {
-    background-image: url("/accessories/home-hero.png");
+    background-image: url("../accessories/home-hero.png");
     background-size: cover !important;
     background-position: center !important;
     height: 100vh !important;
@@ -922,7 +922,7 @@ text-align: left !important;
       justify-content: center !important;
       /* position: absolute !important; */
       /* height: 80vh !important; */
-      background-image: url("/accessories/Rectangle\ 124.png");
+      background-image: url("../accessories/Rectangle\ 124.png");
       background-size: cover !important;
       background-position: center;
       margin-top: 80% !important;
@@ -984,7 +984,7 @@ text-align: left !important;
       justify-content: center !important;
       /* position: absolute !important; */
       height: 80vh !important;
-      background-image: url("/accessories/Rectangle\ 124.png");
+      background-image: url("../accessories/Rectangle\ 124.png");
       background-size: cover !important;
       background-position: center;
     }
