--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -3,7 +3,13 @@
     padding: 0px;
     box-sizing: border-box;  
 }
-
+body {
+    background: url("../accessories/bg-hero.png") center center;
+    background-size: cover;
+    position: relative;
+    /* padding: 80px 0; */
+    min-height: auto;
+}
 .navbar{
     background-color: rgba(3, 3, 3, 0.2);
     position: absolute !important;
