--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -28,7 +28,7 @@ p{
 }
 
 .top-page{
-    background-image: url(../LuxuryRealEstate/assest/Image@2x.png) !important;
+    background-image: url(../accessories/Image@2x.png) !important;
     background-size: cover;
     background-repeat: no-repeat;
     background:linear-gradient(to bottom, none,#f5f3f1);
@@ -36,7 +36,7 @@ p{
 }
 
 .contact-leftside{
-    background-image: url(../LuxuryRealEstate/assest/Rectangle\ 133.png);
+    background-image: url(../accessories/Rectangle\ 133.png);
     border-bottom-left-radius: 50px;
     background-size: cover;
     width: 400px; 
