--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -3,13 +3,7 @@
     padding: 0px;
     box-sizing: border-box;  
 }
-body {
-    background: url("../accessories/bg-hero.png") center center;
-    background-size: cover;
-    position: relative;
-    /* padding: 80px 0; */
-    min-height: auto;
-}
+
 .navbar{
     background-color: rgba(3, 3, 3, 0.2);
     position: absolute !important;
@@ -34,7 +28,7 @@ p{
 }
 
 .top-page{
-    background-image: url(../LuxuryRealEstate/assest/Image@2x.png) !important;
+    background-image: url("../assest/Image@2x.png") !important;
     background-size: cover;
     background-repeat: no-repeat;
     background:linear-gradient(to bottom, none,#f5f3f1);
@@ -42,7 +36,7 @@ p{
 }
 
 .contact-leftside{
-    background-image: url(../LuxuryRealEstate/assest/Rectangle\ 133.png);
+    background-image: url("../assest/Rectangle\ 133.png") !important;
     border-bottom-left-radius: 50px;
     background-size: cover;
     width: 400px; 
